fix: ripple effect on safari

--- a/src/components/Notification/Notification.module.scss
+++ b/src/components/Notification/Notification.module.scss
@@ -14,7 +14,7 @@
   user-select: none;
   cursor: default;
 
-  svg {
+  .icon {
     width: 16px;
     height: 16px;
     margin-top: 2px;
@@ -32,12 +32,9 @@
   display: inline-block;
   margin-bottom: 24px;
 
-  > *:not(:first-of-type) {
-    margin-top: 8px;
-  }
-
   .wrapper {
     box-shadow: 0 1px 18px 0 rgba(115, 112, 112, 0.49), 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 3px 5px -1px rgba(0, 0, 0, 0.2);
+    transition: transform 0.4s var(--bezier-snappy);
 
     &:not(:first-of-type) {
       margin-top: 8px;
